# adl

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  Makefile  README.md
ext/include/: catch.hpp
include/: adl.cfg.hpp  adl.fwd.hpp  adl.hpp  ukoct.hpp
include/adl/: adl.hpp  char_helper.fwd.hpp  char_helper.hpp  cl.hpp  cm.fwd.hpp  cm.hpp  config.hpp  cpu.fwd.hpp  cpu.hpp  crtp.fwd.hpp  crtp.hpp  error.fwd.hpp  error.hpp  intl.hpp  oct.fwd.hpp  oct.hpp  oct_cons.hpp  oct_system.hpp  oct_var.hpp  oct_vexpr.hpp  opencl.fwd.hpp  opencl.hpp  stti.fwd.hpp  stti.hpp  timer.fwd.hpp  timer.hpp  type_helper.hpp  util.fwd.hpp  util.hpp
include/adl/cm/: allocator.hpp  backend.hpp  base.hpp  buffer.hpp  device.hpp  error.hpp  job.hpp  mem.hpp  scheduler.hpp  task.hpp
include/adl/cpu/: async.hpp  error.hpp
include/adl/cpu/async/: allocator.hpp  backend.hpp  device.hpp
include/adl/oct/: cl.hpp  cons.hpp  constant.hpp  context.hpp  cpu.hpp  dbm.hpp  domain_space.hpp  dsl.hpp  limits.hpp  oct.hpp  oct_cons.hpp  oct_cons_base_.hpp  oct_system.hpp  oct_system_base_.hpp  oct_system_stats.hpp  oct_var.hpp  oct_var_base_.hpp  oct_vexpr.hpp  oct_vexpr_base_.hpp  octdiff_cons.hpp  octdiff_system.hpp  octdiff_var.hpp  octdiff_vexpr.hpp  oper.hpp  system.hpp  traits.hpp  util.hpp  var.hpp  var_id.hpp  vexpr.hpp
include/adl/oct/cl/: context.hpp  is_coherent_oper.hpp  queue.hpp
include/adl/oct/cl/kernel/: defs.inc.h
include/adl/oct/cl/kernel/dbm/: dense_dbm.inc.h
include/adl/oct/cons/: basic_oct_cons.hpp  basic_octdiff_conjunction.hpp  basic_octdiff_cons.hpp  cons_base_.hpp
include/adl/oct/context/: context_base_.hpp  traits.hpp
include/adl/oct/cpu/: add_cons_close_oper.hpp  async_context.hpp  close_oper.hpp  closure_oper.hpp  dense_dbm.hpp  is_coherent_oper.hpp  is_consistent_oper.hpp  is_int_consistent_oper.hpp  oper_base_.hpp  seq_context.hpp  shortest_path_oper.hpp  strengthen_oper.hpp  strong_close_oper.hpp  tighten_oper.hpp
include/adl/oct/dbm/: coherent_dbm.hpp  dbm_base_.hpp  dense_dbm.hpp  dense_dbm_base_.hpp  traits.hpp
include/adl/oct/system/: oct_system_.hpp  octdiff_system_.hpp  system_base_.hpp  var_set_.hpp
include/adl/oct/var/: base_.hpp  identity_.hpp  identity_var_base_.hpp  literal_var_base_.hpp  oct_lvar.hpp  oct_var.hpp  octdiff_lvar.hpp  octdiff_var.hpp  var_base_.hpp  view_named_.hpp
include/adl/oct/vexpr/: basic_oct_vexpr.hpp  basic_octdiff_vexpr.hpp  vexpr_base_.hpp
include/adl/opencl/: allocator.hpp  backend.hpp  error.hpp  scheduler.hpp  task_template.hpp  vector.hpp
include/adl/opencl/impl/: cl_.hpp
include/adl/std/: any.hpp  detected.hpp  optional.hpp  string_view.hpp  void_t.hpp
include/adl/std/impl/: any.hpp
include/adl/stti/: base.hpp  has_member_function.hpp  has_member_type.hpp  has_static_member_function.hpp  has_template_member_type.hpp  has_templatepack_member_type.hpp
include/adl/util/: functions.hpp
include/ukoct/: oct.hpp
misc/: cell-dependency-visualizer.html
mono/: .gitignore  Makefile  latexmkrc  mono.bib  mono.sty  mono.tex
mono/tex/: pos-01.00-referencias.tex  pos-02.00-glossario.tex  pos-03.00-apendices.tex  pos-04.00-anexos.tex  pos-05.00-indice.tex  pre-02.00-folha-rosto.tex  pre-02.01-ficha-bibliografica.tex  pre-04.00-errata.tex  pre-05.00-folha-aprovacao.tex  pre-06.00-dedicatoria.tex  pre-07.00-agradecimentos.tex  pre-08.00-epigrafe.tex  pre-09.00-resumos.tex  pre-10.00-listas.tex  pre-11.00-sumario.tex  preambulo-glossario.tex  textual-01.00-introducao.tex  textual-02.00-fundamentacao.tex  textual-03.00-metodologia.tex  textual-04.00-desenvolvimento.tex  textual-05.00-resultados.tex  textual-06.00-conclusao.tex
test/include/: adl_catch.hpp
test/include/adl/: assert.hpp
test/include/adl_catch/: macros.hpp
test/lib/adl/: oct_cons.cpp  oct_var.cpp
test/lib/ukoct/: oct.cpp
test/unit/adl/: char_helper.unit.cpp  config.unit.cpp  error.unit.cpp  intl.unit.cpp  timer.unit.cpp
test/unit/adl/oct/: cons.unit.cpp  constant.unit.cpp  limits.unit.cpp  oper.unit.cpp  system.unit.cpp  traits.unit.cpp  var.unit.cpp  vexpr.unit.cpp
test/unit/adl/oct/cl/: context.unit.cpp  queue.unit.cpp
test/unit/adl/oct/cl/kernel/: defs.unit.cpp
test/unit/adl/oct/cpu/: add_cons_close_oper.unit.cpp  async_context.unit.cpp  close_oper.unit.cpp  closure_oper.unit.cpp  dense_dbm.unit.cpp  is_coherent_oper.unit.cpp  is_consistent_oper.unit.cpp  is_int_consistent_oper.unit.cpp  seq_context.unit.cpp  shortest_path_oper.unit.cpp  strengthen_oper.unit.cpp  strong_close_oper.unit.cpp  tighten_oper.unit.cpp
test/unit/adl/oct/cpu/async/: allocator.unit.cpp  backend.unit.cpp  device.unit.cpp
test/unit/adl/oct/dbm/: coherent_dbm.unit.cpp  dense_dbm.unit.cpp
test/unit/adl/std/: string_view.unit.cpp
test/unit/adl/stti/: has_member_function.unit.cpp  has_member_type.unit.cpp  has_static_member_function.unit.cpp  has_template_member_type.unit.cpp  has_templatepack_member_type.unit.cpp  stti.unit.hpp
test/unit/lib/adl/: adl.cpp  oct_cons.cpp  oct_var.cpp  oct_vexpr.cpp  util.cpp
test/unit/lib/adl/oct/: oct_cons.cpp  oct_cons_base_.hpp  oct_var.cpp  oct_var_base_.hpp  oct_vexpr.cpp  octdiff_cons.cpp  octdiff_var.cpp
